# artifactbay

./: .env.deploy.example  .gitignore  README.md  docker-compose.deploy.yml  docker-compose.full.yml  docker-compose.yml
.github/workflows/: publish.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  seed.py  smoke_test.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  store.py
backend/app/routers/: artifacts.py  auth.py  collections.py  sessions.py
integrations/: README.md  artifactbay  artifactbay_cli.py
integrations/aider/: README.md  post-commit
integrations/claude-code/: stop-hook.md
integrations/claude-code/artifactbay-push/: SKILL.md
integrations/codex/: AGENTS.md
integrations/cursor/: README.md
integrations/opencode/: README.md
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: api.ts  auth.tsx  index.css  main.tsx  router.tsx  theme.tsx
web/src/components/: AddToCollection.tsx  AgentBadge.tsx  ArtifactViewer.tsx  CommandPalette.tsx  FavoriteButton.tsx  ImportSession.tsx  Logo.tsx  ProvenancePanel.tsx  RootLayout.tsx  SessionCard.tsx  ShareButton.tsx  Sidebar.tsx  Snippet.tsx
web/src/lib/: agent.ts  collections.ts
web/src/routes/: ArtifactPage.tsx  CollectionPage.tsx  Dashboard.tsx  Login.tsx  SessionPage.tsx  Settings.tsx
